2020-04-06  Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pkl-tab.y (load_module): Fix check for empty string.
	* src/poke.c (initialize_user): Likewise.

2020-04-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm-val.c (pvm_print_val_1): Update to new interface.
	(pvm_print_val): Use new pvm_print_val_1 interface.
	(pvm_print_val_with_params): New function.
	Do not include poke.h
	(pvm_call_pretty_printer): Get a vm argument and use it instead of
	poke_vm.
	* src/pvm.h (PVM_PRINT_F_PPRINT): Define.
	(PVM_PRINT_F_GET_PPRINT): Likewise.
	(pvm_print_val): Moved from pvm-val.h
	(pvm_obase): New function.
	(pvm_set_obase): Likewise.
	* src/pvm.c (pvm_init): Initialize PVM_STATE_VM.
	(PVM_STATE_VM): Define.
	(PVM_STATE_OBASE): Likewise.
	(pvm_obase): New function.
	(pvm_set_obase): Likewise.
	* src/pk-cmd.c (pk_cmd_exec): Adapt to new interface.
	* src/pvm.jitter (pvm_literal_printer): Likewise.

2020-04-04  Tim Rühsen  <tim.ruehsen@gmx.de>

	* bootstrap.conf: Add gnulib module strchrnul.
	* src/pkl-trans.c: Include string.h and xstrndup.h.
	(pkl_trans1_ps_print_stmt): Code cleanup using strchrnul.

2020-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Load Path): Add an example on updating the
	load_path.
	(pokerc): Document the support for the XDG base directory
	specification.

2020-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-promo.c (pkl_promo_ps_op_binary_intoffstrarr): Renamed
	from pkl_promo_op_binary_intoffstr.
	Do not promote array arguments.
	* src/pkl-typify.c (TYPIFY_BIN): Add a case CASE_ARRAY.
	(CASE_ARRAY): Define.
	* src/pkl-gen.c (pkl_gen_ps_op_add): Handle array operands.
	* src/pkl-insn.def (PKL_INSN_ACONC): New macro-instruction.
	* src/pkl-asm.c (pkl_asm_insn_aconc): Define.
	(pkl_asm_insn): Handle PKL_INSN_ACONC.
	* doc/poke.texi (Array Concatenation): New section.
	* testsuite/poke.pkl/add-arrays-diag-1.pk: New test.
	* testsuite/poke.pkl/add-arrays-diag-2.pk: Likewise.
	* testsuite/poke.pkl/add-arrays-diag-3.pk: Likewise.