@@ -43,6 +43,7 @@ gnulib_modules="
   readline
   secure_getenv
   socket
+  stdarg
   stdbool
   strchrnul
   streq
