@@ -1,5 +1,11 @@
 2020-04-06  Tim Rühsen  <tim.ruehsen@gmx.de>
 
+	* bootstrap.conf: Add gnulib module stdarg.
+	* src/pk-utils.h: Declaration of pk_str_concat.
+	* src/pk-utils.c: Implementation of pk_str_concat.
+
+2020-04-06  Tim Rühsen  <tim.ruehsen@gmx.de>
+
 	* src/pkl-tab.y (load_module): Fix check for empty string.
 	* src/poke.c (initialize_user): Likewise.
 
